--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "sass": "^1.69.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
